--- a/app/src/main/res/layout/item_pictures_list.xml
+++ b/app/src/main/res/layout/item_pictures_list.xml
@@ -13,11 +13,12 @@
         android:id="@+id/iv_picture"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:contentDescription="Here should be photo"
         tools:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/tv_description"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_author_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="end"
